discussion/kv_engine/167838/167838_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Track disk read/written during seq tree mergesort (kv_engine)

Change-Id: Ia04d19a2a85065bb4fcfcf269f3a330dacfab261

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-12-17 15:15:00.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-17 15:18:20.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14582/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-fs-stats.h:68:44: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    void account_bytes_read(size_t nbytes) override;
                                           ^~~~~~~~
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-fs-stats.h:69:47: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    void account_bytes_written(size_t nbytes) override;
                                              ^~~~~~~~

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14582/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-fs-stats.h:68:44:
error: only virtual member functions can be marked "override" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14582/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13412/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
